src/objects/cb5__CBVariable5__c.object
<CustomObject>
    <fields>
        <fullName>cb5__Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__ExtId__c</fullName>
        <label>ExtId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__Index__c</fullName>
        <displayFormat>V{00000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </fields>
    <label>CB Variable 5</label>
    <listViews>
        <fullName>cb5__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CB Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Variables 5</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>